# AMO-Tools-Suite

./: .gitattributes  .gitignore  .npmignore  .travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AnnualCost.cpp  AnnualCost.h  AnnualEnergy.cpp  AnnualEnergy.h  AnnualSavingsPotential.cpp  AnnualSavingsPotential.h  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  Doxyfile  Doxyfile.in  FieldData.cpp  FieldData.h  Financial.cpp  Financial.h  LICENSE.txt  Motor.cpp  Motor.h  OptimizationRating.h  PSATResult.cpp  PSATResult.h  Pump.cpp  Pump.h  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  amo_tools_suite--Linux-x86_64.sh  amo_tools_suite.sln  amo_tools_suite.vcxproj  amo_tools_suite.vcxproj.filters  amo_tools_suite_main.vcxproj  amo_tools_suite_main.vcxproj.filters  amo_tools_suite_tests.vcxproj  (+10 more)
.github/: contributing.md  issue_template.md  pull_request_template.md
.nyc_output/processinfo/: 088676c6-13e0-456d-8a51-5b482b9b4880.json  1490506a-ee1d-4bef-8333-af8bc9a8556a.json  2dba7b76-d167-4e8f-941d-ab562670cd6e.json  47a2f1d8-acf2-4305-9ed2-7b9bfcd56045.json  48ea744c-f38c-40a8-aa1b-cab3c722aa6b.json  87bd1a91-e1b7-499f-9114-240c1a3fc44c.json  91acfce3-add8-4cfb-8d86-e406542512ac.json  9495a3b9-1960-4de1-99e8-cfb378a5a3e6.json  a0f4d7f5-5531-4465-92f1-e648b1d00316.json  a7a80756-83a9-4843-97a2-fa61d79c8856.json  c5f708ee-a398-4eac-b727-575fc52f4044.json  c8c68b37-776e-4c48-b2cc-f13d53bba923.json  ea01de02-40cf-488b-9cbb-c485421649b2.json  fe5af535-d319-4e63-b148-2c9e5e66c088.json  index.json
Docker/: Dockerfile  docker_commands.txt
bindings/: ExhaustGasEAF.cpp  NanDataConverters.h  amo_tools_suite.cpp  bridge.cpp  caCentrifugal.cpp  caCentrifugal.h  calculator.cpp  calculator.h  chillers.cpp  chillers.h  compressedAir.cpp  compressedAir.h  compressorsCalc.cpp  compressorsCalc.h  db.cpp  db.h  fan.cpp  fan.h  losses.h  phast.cpp  phast.h  processHeat.cpp  processHeat.h  psat-bridge.h  psat.cpp  psat.h  ssmt.cpp  ssmt.h  standalone.cpp  standalone.h  svi.cpp  svi.h  wasteWater.cpp  wasteWater.h  wasteWater.h.orig
bindings-wasm/: calculator.cpp  chillers.cpp  compressorsCalc.cpp  db.cpp  processHeat.cpp  psat.cpp  svi.cpp  wasteWater.cpp
bindings-wasm/electrical/: powerFactor.cpp
bindings-wasm/fan/: fan.cpp  fanEnum.cpp
bindings-wasm/motor/: motor.cpp  motorEnum.cpp  nema.cpp
bindings-wasm/phast/: phast.cpp  phastEnum.cpp
bindings-wasm/psat/: psat.cpp  psatEnum.cpp
bindings-wasm/ssmt/: ssmt.cpp  ssmtEnum.cpp  ssmtModeler.cpp
bindings-wasm/standalone/: standalone.cpp  standaloneEnum.cpp
bindings-wasm/water/: waterAssessment.cpp
bindings/steam/: SteamModelerInputDataMapper.h  SteamModelerOutputDataMapper.h
calculator/: AnnualCost.cpp  AnnualCost.h  AnnualEnergy.cpp  AnnualEnergy.h  AnnualSavingsPotential.cpp  AnnualSavingsPotential.h  CurveFit.cpp  CurveFit.h  CurveFitVal.cpp  CurveFitVal.h  EstimateFLA.cpp  EstimateFLA.h  FluidPower.cpp  FluidPower.h  MotorCurrent.cpp  MotorCurrent.h  MotorEfficiency.cpp  MotorEfficiency.h  MotorEfficiency25.cpp  MotorEfficiency25.h  MotorPower.cpp  MotorPower.h  MotorPowerFactor.cpp  MotorPowerFactor.h  MotorRatedPower.cpp  MotorRatedPower.h  MotorShaftPower.cpp  MotorShaftPower.h  OptimalDeviationFactor.cpp  OptimalDeviationFactor.h  OptimalMotorCurrent.cpp  OptimalMotorCurrent.h  OptimalMotorEfficiency.cpp  OptimalMotorEfficiency.h  OptimalMotorPower.cpp  OptimalMotorPower.h  OptimalMotorPowerFactor.cpp  OptimalMotorPowerFactor.h  OptimalMotorRatedPower.cpp  OptimalMotorRatedPower.h  (+23 more)
cmake/: CompilerFlags.cmake  Install.cmake  ProjectMacros.cmake
docs/html/: ____init_____8py_source.html  _annual_cost_8cpp_source.html  _annual_cost_8h_source.html  _annual_energy_8cpp_source.html  _atmosphere_8cpp.html  _atmosphere_8cpp_source.html  _atmosphere_8h_source.html  _curve_fit_val_8h_source.html  _energy_equivalency_8cpp.html  _energy_equivalency_8h_source.html  _energy_equivalency_8unit_8cpp_source.html  _energy_input_e_a_f_8unit_8cpp_source.html  _estimate_f_l_a_8h_source.html  _exhaust_gas_e_a_f_8cpp.html  _financial_8h_source.html  _fixture_losses_8cpp_source.html  _fixture_losses_8unit_8cpp_source.html  _flow_calculations_energy_use_8cpp.html  _flow_calculations_energy_use_8h.html  _fluid_power_8cpp_source.html  _furnace_8cpp_source.html  _furnace_8h.html  _furnace_8h_source.html  _gas_cooling_losses_8cpp.html  _gas_cooling_losses_8h.html  _gas_cooling_losses_8h_source.html  _gas_cooling_losses_8unit_8cpp_source.html  _gas_flue_gas_material_8cpp.html  _gas_flue_gas_material_8cpp_source.html  _gas_flue_gas_material_8h.html  _gas_flue_gas_material_8unit_8cpp_source.html  _gas_flue_gas_material_data_8h_source.html  _gas_load_charge_material_8h.html  (+146 more)
include/: FieldData.h  Financial.h  Motor.h  OptimizationRating.h  PSATResult.h  Pump.h
scripts/: seed_data.py  seed_database.py
src/: FieldData.cpp  Financial.cpp  Motor.cpp  OptimizationRating.cpp  Pump.cpp
tests/: Atmosphere.unit.cpp  AuxiliaryPower.unit.cpp  Boiler.unit.cpp  CHP.unit.cpp  CompressedAir.unit.cpp  CompressedAirCentrifugal.unit.cpp  CompressedAirLeakSurvey.unit.cpp  CompressedAirPressureReduction.unit.cpp  CompressedAirReduction.unit.cpp  CompressibilityFactor.unit.cpp  Compressors.unit.cpp  CoolingTower.unit.cpp  Deaerator.unit.cpp  EfficiencyImprovement.unit.cpp  EfficinecyImprovement.unit.cpp  ElectricArcFurnaceEAF.unit.cpp  ElectricityReduction.unit.cpp  EnergyEquivalency.unit.cpp  EnergyInputEAF.unit.cpp  EnergyInputExhaustGasLosses.unit.cpp  EstimateFLA.unit.cpp  ExhaustGasEAF.unit.cpp  ExhuastGasEAF.unit.cpp  Fan.unit.cpp  FixtureLosses.unit.cpp  FlashTank.unit.cpp  FlowCalculationsEnergyUse.unit.cpp  FlueGas.unit.cpp  FluidPower.unit.cpp  GasCoolingLoss.unit.cpp  GasCoolingLosses.unit.cpp  GasFlueGasMaterial.unit.cpp  GasLoadChargeMaterial.unit.cpp  HeadTool.unit.cpp  Header.unit.cpp  HeatExchanger.unit.cpp  HeatLoss.unit.cpp  HumidityRatio.unit.cpp  InsulatedPipeReduction.unit.cpp  InsulatedTankReduction.unit.cpp  (+28 more)
travis_scripts/: before_install.sh  build.sh  build_test.sh  package_release.sh
(+629 files in other folders)
